--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" href="favicon.ico?01022017" />
 		<meta name="yandex-verification" content="ca19d062fa4c807e" />
 <meta name="yandex-verification" content="f92d4c240d869133" />
-		<title>GDE ZAKAZ</title>
+		<title>Georgeus</title>
 		<meta name="description" content="Комплекс сервисов по повышению выкупа  заказов и увеличению продаж, профессиональный трекинг сервис служб доставки и Почты России, смс-уведомления, роботизированные звонки, viber и telegram уведомления." />
 <meta name="Keywords" lang="ru" content="повышение выкупа, трекинг посылок, уведомления клиентам, отследить посылку, viber оповещения,Почта Казахстана,дополнительные, продажи, СДЭК, DPD, трекинг заказов, отследить почта России, TopDelivery, СПСР-Экспресс, EMS, отслеживание почты, наложенный платеж, telegram бот, смс-уведомление почтовых отправлений, трекинг посылок для интернет магазинов, сокращение расходов, голосовые уведомления, аналитика, сервис для интернет магазина" />
 	    <!--<meta name="viewport" content="width=device-width" />-->
@@ -67,7 +67,7 @@
 	  					<a class="logo" href="index.html">
 <!--	       					<img src="new_land_img/logo.png"  title="Трекинг-сервис заказов" alt="DostavkInfo.ru - Трекинг-Сервис для бизнеса" />-->
 	            			<div>
-		                		<span style="font-family: BlackCasper; font-size: 120px;">GDE ZAKAZ</span>
+		                		<span style="font-family: BlackCasper; font-size: 120px;">Georgeus</span>
 	               			</div>
 	        			</a>
 						<div class="header-second">
@@ -198,11 +198,11 @@
 <!-- BEGIN BLOCK SERVICE -->
 			<div class="service-top b_width">
 				<div class="wrapp-box">
-					<strong class="title wow bounceInUp" style="animation-delay: 0.1s;">«GDE ZAKAZ» предлагает отследить<br> посылку с уведомлением по E-Mail</strong>
+					<strong class="title wow bounceInUp" style="animation-delay: 0.1s;">«Georgeus» предлагает отследить<br> посылку с уведомлением по E-Mail</strong>
 					<ul class="list-service-top list-block">
 						<li class="wow bounceIn" style="animation-delay: 0.4s;">
 							<div>
-								<strong>GDE ZAKAZ</strong>
+								<strong>Georgeus</strong>
 								<span>отследит заказы</span>
 							</div>
 						<!--</li>-->
@@ -821,7 +821,7 @@
 
 
 						<div class="footer-info">
-							GDE ZAKAZ
+							Georgeus
 
 						</div>	
 					</div>
